ARM64/dts: sdmmagpie: Suppress verbose output during boot
This should make the kernel initialization faster as it suppresses any
potential serial console output.

Change-Id: Iafcb84908f0911f14b0c560c2122d9be65bf216f
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Forenche <prahul2003@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -457,7 +457,7 @@
 	};
 
 	chosen {
-		bootargs = "rcu_nocbs=0-7 kpti=off noirqdebug nosoftlockup mce=ignore_ce";
+		bootargs = "rcu_nocbs=0-7 kpti=off quiet noirqdebug nosoftlockup mce=ignore_ce";
 	};
 
 	soc: soc { };
