--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -655,7 +655,7 @@ CONFIG_SETEND_EMULATION=y
 # ARMv8.1 architectural features
 #
 CONFIG_ARM64_HW_AFDBM=y
-CONFIG_ARM64_PAN=y
+# CONFIG_ARM64_PAN is not set
 CONFIG_ARM64_LSE_ATOMICS=y
 # CONFIG_ARM64_VHE is not set
 
@@ -4728,7 +4728,7 @@ CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_MSM_AGL is not set
 # CONFIG_QCOM_HGSL_TCSR_SIGNAL is not set
 # CONFIG_MSM_PERFORMANCE is not set
-CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION=y
+# CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION is not set
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 CONFIG_QCOM_CDSP_RM=y
 CONFIG_QCOM_CX_IPEAK=y
