--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1236,6 +1236,9 @@ config CC_OPTIMIZE_FOR_SIZE
 
 endchoice
 
+config LTO_GCC
+	bool "Enable Link Time Optimization for GCC"
+
 config SYSCTL
 	bool
 
