--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -457,7 +457,7 @@
 	};
 
 	chosen {
-		bootargs = "rcu_nocbs=0-7 kpti=off quiet noirqdebug nosoftlockup mce=ignore_ce";
+		bootargs = "rcu_nocbs=0-7 rcupdate.rcu_normal_after_boot=1 kpti=off quiet noirqdebug nosoftlockup mce=ignore_ce";
 	};
 
 	soc: soc { };
