init: Guard initramfs hack
Signed-off-by: Forenche <prahul2003@gmail.com>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1184,6 +1184,11 @@ config BLK_DEV_INITRD
 
 if BLK_DEV_INITRD
 
+config PATCH_INITRAMFS
+	bool "Pre-patch with Magisk's want_initramfs hack"
+	help
+          If unsure, say N.
+
 source "usr/Kconfig"
 
 endif
