--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1239,6 +1239,9 @@ config LD_DEAD_CODE_DATA_ELIMINATION
 	  present. This option is not well tested yet, so use at your
 	  own risk.
 
+config GCC_GRAPHITE
+	bool "Enable GCC Polyhedral Loop Optimization (Graphite)"
+
 config SYSCTL
 	bool
 
