--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -617,7 +617,7 @@ CONFIG_ARM64_SW_TTBR0_PAN=y
 #
 CONFIG_ARM64_HW_AFDBM=y
 CONFIG_ARM64_PAN=y
-# CONFIG_ARM64_LSE_ATOMICS is not set
+CONFIG_ARM64_LSE_ATOMICS=y
 # CONFIG_ARM64_VHE is not set
 
 #
