--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -4551,7 +4551,7 @@ CONFIG_MSM_CAMCC_SM8150=y
 CONFIG_CLOCK_CPU_OSM=y
 # CONFIG_CLOCK_CPU_OSM_660 is not set
 CONFIG_MSM_DISPCC_SM8150=y
-CONFIG_MSM_DEBUGCC_SM8150=y
+# CONFIG_MSM_DEBUGCC_SM8150 is not set
 CONFIG_MSM_CLK_RPMH=y
 CONFIG_MSM_GPUCC_SM8150=y
 # CONFIG_MSM_GCC_SDMSHRIKE is not set
@@ -5725,30 +5725,7 @@ CONFIG_ARM64_PTDUMP_CORE=y
 # CONFIG_DEBUG_WX is not set
 CONFIG_DEBUG_ALIGN_RODATA=y
 # CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE is not set
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_LINKS_AND_SINKS=y
-CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
-# CONFIG_CORESIGHT_CATU is not set
-# CONFIG_CORESIGHT_SINK_TPIU is not set
-# CONFIG_CORESIGHT_SINK_ETBV10 is not set
-# CONFIG_CORESIGHT_SOURCE_ETM4X is not set
-CONFIG_CORESIGHT_DYNAMIC_REPLICATOR=y
-# CONFIG_CORESIGHT_DBGUI is not set
-CONFIG_CORESIGHT_STM=y
-# CONFIG_CORESIGHT_CPU_DEBUG is not set
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_OST=y
-CONFIG_CORESIGHT_TPDA=y
-CONFIG_CORESIGHT_TPDM=y
-# CONFIG_CORESIGHT_TPDM_DEFAULT_ENABLE is not set
-# CONFIG_CORESIGHT_QPDI is not set
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_DUMMY=y
-CONFIG_CORESIGHT_REMOTE_ETM=y
-CONFIG_CORESIGHT_REMOTE_ETM_DEFAULT_ENABLE=0
-CONFIG_CORESIGHT_CSR=y
-# CONFIG_CORESIGHT_TGU is not set
-CONFIG_CORESIGHT_EVENT=y
+# CONFIG_CORESIGHT is not set
 
 #
 # Security options
