--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -3347,6 +3347,7 @@ CONFIG_DRM_SDE_WB=y
 CONFIG_DRM_MSM_KCAL_CTRL=y
 CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
+# CONFIG_FENCE_DEBUG is not set
 # CONFIG_DRM_MSM_LEASE is not set
 CONFIG_DRM_PANEL=y
 
