--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -5062,10 +5062,7 @@ CONFIG_DAX=y
 CONFIG_NVMEM=y
 # CONFIG_QCOM_QFPROM is not set
 CONFIG_NVMEM_SPMI_SDAM=y
-CONFIG_STM=y
-# CONFIG_STM_DUMMY is not set
-# CONFIG_STM_SOURCE_CONSOLE is not set
-# CONFIG_STM_SOURCE_HEARTBEAT is not set
+# CONFIG_STM is not set
 # CONFIG_INTEL_TH is not set
 CONFIG_CORESIGHT_PLACEHOLDER=y
 CONFIG_CORESIGHT_AMBA_PLACEHOLDER=y
