--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -1214,7 +1214,7 @@
 		qcom,eud-clock-vote-req;
 		clocks = <&clock_gcc GCC_USB_PHY_CFG_AHB2PHY_CLK>;
 		clock-names = "eud_ahb2phy_clk";
-		status = "ok";
+		status = "disabled";
 	};
 
 	qcom,chd_sliver {
@@ -3264,7 +3264,7 @@
 #include "sdmmagpie-gpu.dtsi"
 
 &usb0 {
-	extcon = <&pm6150_pdphy>, <&pm6150_charger>, <&eud>;
+	extcon = <&pm6150_pdphy>, <&pm6150_charger>;
 };
 
 &pm6150_vadc {
