defconfig: Disable more bloat
Signed-off-by: xNombre <kartapolska@gmail.com>
Change-Id: I3a19d8806221b4e77f56775a67e6c41f977b1a4c
Signed-off-by: Forenche <prahul2003@gmail.com>

--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -191,7 +191,7 @@ CONFIG_EXPERT=y
 CONFIG_UID16=y
 CONFIG_MULTIUSER=y
 # CONFIG_SGETMASK_SYSCALL is not set
-CONFIG_SYSFS_SYSCALL=y
+# CONFIG_SYSFS_SYSCALL is not set
 # CONFIG_SYSCTL_SYSCALL is not set
 CONFIG_POSIX_TIMERS=y
 CONFIG_KALLSYMS=y
@@ -4559,7 +4559,7 @@ CONFIG_QCOM_SECURE_BUFFER=y
 CONFIG_ICNSS=y
 CONFIG_ICNSS_QMI=y
 # CONFIG_CNSS_TIMESYNC is not set
-CONFIG_QCOM_EUD=y
+# CONFIG_QCOM_EUD is not set
 # CONFIG_QCOM_MINIDUMP is not set
 CONFIG_QCOM_BUS_SCALING=y
 CONFIG_QCOM_BUS_CONFIG_RPMH=y
