defconfig: Disable F2FS I/O Statistics logging
Change-Id: Ia2b9841c8fce3a54680c1d128c576d25289593eb
Signed-off-by: Panchajanya1999 <panchajanya@azure-dev.live>
(cherry picked from commit 920ab3e)
Signed-off-by: Forenche <prahul2003@gmail.com>

--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -4709,7 +4709,7 @@ CONFIG_F2FS_FS_LZORLE=y
 CONFIG_F2FS_FS_LZ4=y
 CONFIG_F2FS_FS_LZ4HC=y
 CONFIG_F2FS_FS_ZSTD=y
-CONFIG_F2FS_IOSTAT=y
+# CONFIG_F2FS_IOSTAT is not set
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_EXPORTFS=y
