--- a/arch/arm64/boot/dts/qcom/dsi-panel-nt36672c-huaxing-fhd-video.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-nt36672c-huaxing-fhd-video.dtsi
@@ -19,6 +19,7 @@
 		qcom,mdss-dsi-stream = <0>;
 		qcom,mdss-dsi-bpp = <24>;
 		qcom,mdss-dsi-color-order = "rgb_swap_rgb";
+		qcom,mdss-dsi-lane-map = "lane_map_0123";
 		qcom,mdss-dsi-underflow-color = <0xff>;
 		qcom,mdss-dsi-border-color = <0>;
 		qcom,mdss-dsi-traffic-mode = "non_burst_sync_event";
