--- a/arch/arm64/boot/dts/qcom/dsi-panel-nt36672c-tianma-fhd-video.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-nt36672c-tianma-fhd-video.dtsi
@@ -23,6 +23,8 @@
 		qcom,mdss-dsi-v-top-border = <0>;
 		qcom,mdss-dsi-v-bottom-border = <0>;
 		qcom,mdss-dsi-bpp = <24>;
+		qcom,mdss-dsi-color-order = "rgb_swap_rgb";
+		qcom,mdss-dsi-lane-map = "lane_map_0123";
 		qcom,mdss-dsi-underflow-color = <0xff>;
 		qcom,mdss-dsi-border-color = <0>;
 		qcom,mdss-dsi-traffic-mode = "non_burst_sync_event";
