defconfig: Disable per-cgroup pressure tracking Disable per-cgroup psi tracking to prevent unnecessary overhead since Android does not use per-cgroup psi information.
Change-Id: Ia6f8046ae6f98a5b7a40adb70fdf847735ab0bac
Signed-off-by: Srinivasarao Pathipati <quic_spathi@quicinc.com>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Forenche <prahul2003@gmail.com>

--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -173,6 +173,7 @@ CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_PATCH_INITRAMFS is not set
 CONFIG_INITRAMFS_SOURCE=""
+# CONFIG_INITRAMFS_FORCE is not set
 CONFIG_RD_GZIP=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
@@ -673,7 +674,10 @@ CONFIG_RANDOMIZE_BASE=y
 #
 # Boot options
 #
-CONFIG_CMDLINE=""
+CONFIG_CMDLINE="cgroup_disable=pressure"
+# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
+CONFIG_CMDLINE_EXTEND=y
+# CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP=y
