qcacld-3.0: optimize for size
- Add -O2 flag.
- Add -g0, drops most of the debug that we don't really care about.

Saves about 120kb, which isn't much, but appretiated anyway.

Signed-off-by: Yaroslav Furman <yaro330@gmail.com>
Signed-off-by: Cyber Knight <cyberknight755@gmail.com>
[forenche: Change -Os to -O2 as -Os has regressions]
Signed-off-by: Forenche <prahul2003@gmail.com>

--- a/drivers/staging/qcacld-3.0/Kbuild
+++ b/drivers/staging/qcacld-3.0/Kbuild
@@ -3390,6 +3390,9 @@ else
 	ccflags-y += -DWLAN_HOST_ARCH_ARM=1
 endif
 
+ccflags-y += $(call cc-option, -g0)
+ccflags-y += $(call cc-option, -O2)
+
 # inject some build related information
 ifeq ($(CONFIG_BUILD_TAG), y)
 CLD_CHECKOUT = $(shell cd "$(WLAN_ROOT)" && \
