defconfig: disable process reclaim
Signed-off-by: Jebaitedneko <Jebaitedneko@gmail.com>
Signed-off-by: Forenche <prahul2003@gmail.com>

--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -630,7 +630,7 @@ CONFIG_FRAME_VECTOR=y
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
-CONFIG_PROCESS_RECLAIM=y
+# CONFIG_PROCESS_RECLAIM is not set
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
