--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -2314,11 +2314,7 @@ CONFIG_SERIAL_MSM_GENI=y
 # CONFIG_TTY_PRINTK is not set
 # CONFIG_HVC_DCC is not set
 # CONFIG_IPMI_HANDLER is not set
-CONFIG_HW_RANDOM=y
-# CONFIG_HW_RANDOM_TIMERIOMEM is not set
-# CONFIG_HW_RANDOM_MSM is not set
-CONFIG_HW_RANDOM_MSM_LEGACY=y
-CONFIG_HW_RANDOM_CAVIUM=y
+# CONFIG_HW_RANDOM is not set
 # CONFIG_APPLICOM is not set
 
 #
@@ -2337,6 +2333,7 @@ CONFIG_DIAG_OVER_USB=y
 CONFIG_MSM_FASTCVPD=y
 CONFIG_MSM_ADSPRPC=y
 # CONFIG_MSM_RDBG is not set
+CONFIG_SRANDOM=y
 
 #
 # I2C support
@@ -3873,7 +3870,6 @@ CONFIG_USB_EHSET_TEST_FIXTURE=y
 # CONFIG_USB_HSIC_USB3503 is not set
 # CONFIG_USB_HSIC_USB4604 is not set
 CONFIG_USB_LINK_LAYER_TEST=y
-# CONFIG_USB_CHAOSKEY is not set
 # CONFIG_USB_REDRIVER_NB7VPQ904M is not set
 # CONFIG_USB_TYPEC_MUX_NXP5150A is not set
 # CONFIG_USB_QTI_DIAG_BRIDGE is not set
