--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -1455,6 +1455,7 @@ CONFIG_UID_SYS_STATS=y
 CONFIG_MEMORY_STATE_TIME=y
 CONFIG_QPNP_MISC=y
 # CONFIG_TEST_IRQ_REQUESTER is not set
+CONFIG_LDO_WL2866D=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1521,7 +1522,9 @@ CONFIG_QPNP_MISC=y
 #
 # FingerprintCard fingerprint driver
 #
-CONFIG_FPR_FPC=y
+# CONFIG_FPR_FPC is not set
+CONFIG_AW8624_HAPTIC=y
+CONFIG_DRV2624_HAPTIC=y
 
 #
 # SCSI device support
@@ -2060,6 +2063,7 @@ CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 # CONFIG_INPUT_KEYRESET is not set
 # CONFIG_INPUT_KEYCOMBO is not set
+CONFIG_INPUT_FINGERPRINT=y
 
 #
 # Input Device Drivers
@@ -2210,6 +2214,9 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_DEBUG is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_TCM is not set
 # CONFIG_TOUCHSCREEN_RAYDIUM_CHIPSET is not set
+CONFIG_TOUCHSCREEN_COMMON=y
+CONFIG_TOUCHSCREEN_NT36xxx_HOSTDL_SPI=y
+CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATMEL_CAPTOUCH is not set
@@ -2247,6 +2254,12 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
 # CONFIG_SMI130 is not set
 # CONFIG_RMI4_CORE is not set
+
+#
+# Fingerprint Drivers
+#
+CONFIG_FINGERPRINT_FPC1020=y
+CONFIG_FINGERPRINT_GF3208=y
 
 #
 # Hardware I/O ports
@@ -2660,6 +2673,14 @@ CONFIG_QPNP_SMB5=y
 CONFIG_SMB1390_CHARGE_PUMP_PSY=y
 # CONFIG_SMB1398_CHARGER is not set
 # CONFIG_SMB358_CHARGER is not set
+CONFIG_REVERSE_CHARGE=y
+
+#
+# TI Technologies, Inc. Charger support
+#
+CONFIG_BQ2597X_CHARGE_PUMP=y
+CONFIG_BATT_VERIFY_BY_DS28E16=y
+CONFIG_ONEWIRE_GPIO=y
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
@@ -3354,6 +3375,7 @@ CONFIG_DRM_MSM_DSI_STAGING=y
 CONFIG_DRM_SDE_WB=y
 # CONFIG_DRM_SDE_SHD is not set
 # CONFIG_DRM_SDE_SHP is not set
+CONFIG_DRM_MSM_KCAL_CTRL=y
 CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
 # CONFIG_DRM_MSM_LEASE is not set
@@ -4132,7 +4154,7 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_PCA963X is not set
 # CONFIG_LEDS_PCA9956B is not set
 CONFIG_LEDS_QPNP_FLASH_V2=y
-CONFIG_LEDS_QPNP_HAPTICS=y
+# CONFIG_LEDS_QPNP_HAPTICS is not set
 # CONFIG_LEDS_DAC124S085 is not set
 # CONFIG_LEDS_PWM is not set
 # CONFIG_LEDS_REGULATOR is not set
@@ -4152,7 +4174,7 @@ CONFIG_LEDS_QPNP_HAPTICS=y
 CONFIG_LEDS_QTI_TRI_LED=y
 # CONFIG_LEDS_SYSCON is not set
 # CONFIG_LEDS_USER is not set
-CONFIG_LEDS_QPNP_VIBRATOR_LDO=y
+# CONFIG_LEDS_QPNP_VIBRATOR_LDO is not set
 
 #
 # LED Triggers
@@ -5413,6 +5435,7 @@ CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 # CONFIG_FAT_DEFAULT_UTF8 is not set
 CONFIG_SDFAT_FS=y
+CONFIG_SDFAT_USE_FOR_EXFAT=y
 CONFIG_SDFAT_DELAYED_META_DIRTY=y
 CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
 CONFIG_SDFAT_DEFAULT_CODEPAGE=437
