--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -467,7 +467,7 @@ CONFIG_FREEZER=y
 CONFIG_ARCH_QCOM=y
 # CONFIG_ARCH_SM8150 is not set
 # CONFIG_ARCH_SDMSHRIKE is not set
-CONFIG_ARCH_SM6150=y
+# CONFIG_ARCH_SM6150 is not set
 # CONFIG_ARCH_ATOLL is not set
 # CONFIG_ARCH_QCS405 is not set
 # CONFIG_ARCH_QCS403 is not set
@@ -2563,7 +2563,7 @@ CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 # CONFIG_PINCTRL_SM8150 is not set
 CONFIG_PINCTRL_SDMMAGPIE=y
 # CONFIG_PINCTRL_SDMSHRIKE is not set
-CONFIG_PINCTRL_SM6150=y
+# CONFIG_PINCTRL_SM6150 is not set
 # CONFIG_PINCTRL_ATOLL is not set
 # CONFIG_PINCTRL_TRINKET is not set
 # CONFIG_PINCTRL_SDXPRAIRIE is not set
@@ -4543,30 +4543,30 @@ CONFIG_COMMON_CLK_QCOM=y
 # CONFIG_MSM_MMCC_660 is not set
 CONFIG_SPMI_PMIC_CLKDIV=y
 CONFIG_MSM_CLK_AOP_QMP=y
-CONFIG_MSM_GCC_SM8150=y
-CONFIG_MSM_NPUCC_SM8150=y
+# CONFIG_MSM_GCC_SM8150 is not set
+# CONFIG_MSM_NPUCC_SM8150 is not set
 # CONFIG_MSM_SCC_SM8150 is not set
-CONFIG_MSM_VIDEOCC_SM8150=y
-CONFIG_MSM_CAMCC_SM8150=y
+# CONFIG_MSM_VIDEOCC_SM8150 is not set
+# CONFIG_MSM_CAMCC_SM8150 is not set
 CONFIG_CLOCK_CPU_OSM=y
 # CONFIG_CLOCK_CPU_OSM_660 is not set
-CONFIG_MSM_DISPCC_SM8150=y
+# CONFIG_MSM_DISPCC_SM8150 is not set
 # CONFIG_MSM_DEBUGCC_SM8150 is not set
 CONFIG_MSM_CLK_RPMH=y
-CONFIG_MSM_GPUCC_SM8150=y
+# CONFIG_MSM_GPUCC_SM8150 is not set
 # CONFIG_MSM_GCC_SDMSHRIKE is not set
 # CONFIG_MSM_CAMCC_SDMSHRIKE is not set
 # CONFIG_MSM_DEBUGCC_SDMSHRIKE is not set
 # CONFIG_MDM_GCC_QCS405 is not set
 # CONFIG_MDM_DEBUGCC_QCS405 is not set
 # CONFIG_CLOCK_CPU_QCS405 is not set
-CONFIG_MSM_GCC_SM6150=y
-CONFIG_MSM_GPUCC_SM6150=y
-CONFIG_MSM_VIDEOCC_SM6150=y
-CONFIG_MSM_DEBUGCC_SM6150=y
-CONFIG_MSM_CAMCC_SM6150=y
-CONFIG_MSM_DISPCC_SM6150=y
-CONFIG_MSM_SCC_SM6150=y
+# CONFIG_MSM_GCC_SM6150 is not set
+# CONFIG_MSM_GPUCC_SM6150 is not set
+# CONFIG_MSM_VIDEOCC_SM6150 is not set
+# CONFIG_MSM_DEBUGCC_SM6150 is not set
+# CONFIG_MSM_CAMCC_SM6150 is not set
+# CONFIG_MSM_DISPCC_SM6150 is not set
+# CONFIG_MSM_SCC_SM6150 is not set
 CONFIG_MSM_CAMCC_SDMMAGPIE=y
 CONFIG_MSM_DISPCC_SDMMAGPIE=y
 CONFIG_MSM_GCC_SDMMAGPIE=y
@@ -4699,7 +4699,7 @@ CONFIG_QCOM_MDT_LOADER=y
 CONFIG_QCOM_LLCC=y
 # CONFIG_QCOM_SM8150_LLCC is not set
 # CONFIG_QCOM_SDMSHRIKE_LLCC is not set
-CONFIG_QCOM_SM6150_LLCC=y
+# CONFIG_QCOM_SM6150_LLCC is not set
 CONFIG_QCOM_SDMMAGPIE_LLCC=y
 # CONFIG_QCOM_ATOLL_LLCC is not set
 # CONFIG_QCOM_SDXPRAIRIE_LLCC is not set
@@ -5190,7 +5190,7 @@ CONFIG_QCOM_SHOW_RESUME_IRQ=y
 CONFIG_PARTITION_PERCPU=y
 CONFIG_QTI_PDC=y
 # CONFIG_QTI_PDC_SM8150 is not set
-CONFIG_QTI_PDC_SM6150=y
+# CONFIG_QTI_PDC_SM6150 is not set
 CONFIG_QTI_PDC_SDMMAGPIE=y
 # CONFIG_QTI_PDC_SDXPRAIRIE is not set
 # CONFIG_QTI_PDC_ATOLL is not set
