--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -1223,6 +1223,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_NET_L3_MASTER_DEV is not set
 CONFIG_QRTR=y
 CONFIG_QRTR_NODE_ID=1
+CONFIG_QRTR_WAKEUP_MS=0
 CONFIG_QRTR_SMD=y
 # CONFIG_QRTR_USB is not set
 # CONFIG_QRTR_FIFO is not set
