defconfig: Build devicetree overlay
Signed-off-by: Forenche <prahul2003@gmail.com>

--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -681,7 +681,7 @@ CONFIG_CMDLINE=""
 CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP=y
 # CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL is not set
 CONFIG_KRYO_PMU_WORKAROUND=y
-# CONFIG_BUILD_ARM64_DT_OVERLAY is not set
+CONFIG_BUILD_ARM64_DT_OVERLAY=y
 
 #
 # Userspace binary formats
