defconfig: Disable unused stuff
Signed-off-by: Andrzej Perczak <linux@andrzejperczak.com>
Change-Id: Ibf84f67bf9f94540e4606bb42b2b3cb4a26e859c
Signed-off-by: Forenche <prahul2003@gmail.com>

--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -4576,13 +4576,13 @@ CONFIG_QCOM_GLINK_PKT=y
 # CONFIG_MSM_JTAGV8 is not set
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QCOM_SMCINVOKE=y
-CONFIG_MSM_EVENT_TIMER=y
+# CONFIG_MSM_EVENT_TIMER is not set
 # CONFIG_MSM_AVTIMER is not set
 CONFIG_MSM_PM=y
 # CONFIG_MSM_PM_LEGACY is not set
 # CONFIG_MSM_QBT1000 is not set
 # CONFIG_APSS_CORE_EA is not set
-CONFIG_QCOM_FSA4480_I2C=y
+# CONFIG_QCOM_FSA4480_I2C is not set
 # CONFIG_MSM_IDLE_STATS is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_MSM_HAB is not set
@@ -5117,11 +5117,10 @@ CONFIG_DCACHE_WORD_ACCESS=y
 # CONFIG_EXT2_FS is not set
 # CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
-CONFIG_EXT4_USE_FOR_EXT2=y
+# CONFIG_EXT4_USE_FOR_EXT2 is not set
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
-CONFIG_EXT4_ENCRYPTION=y
-# CONFIG_EXT4_FS_ENCRYPTION is not set
+# CONFIG_EXT4_ENCRYPTION is not set
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
