defconfig: Debloat a bit more
Signed-off-by: Forenche <prahul2003@gmail.com>

--- a/arch/arm64/configs/surya_defconfig
+++ b/arch/arm64/configs/surya_defconfig
@@ -2515,14 +2515,14 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_QPNP_FG_GEN4 is not set
 CONFIG_QPNP_QG=y
 # CONFIG_SMB1351_USB_CHARGER is not set
-CONFIG_SMB1355_SLAVE_CHARGER=y
+# CONFIG_SMB1355_SLAVE_CHARGER is not set
 # CONFIG_QPNP_SMB2 is not set
 CONFIG_QPNP_SMB5=y
 # CONFIG_SMB138X_CHARGER is not set
 # CONFIG_QPNP_QNOVO is not set
 # CONFIG_QPNP_QNOVO5 is not set
 # CONFIG_SMB1390_CHARGE_PUMP is not set
-CONFIG_SMB1390_CHARGE_PUMP_PSY=y
+# CONFIG_SMB1390_CHARGE_PUMP_PSY is not set
 # CONFIG_SMB1398_CHARGER is not set
 # CONFIG_SMB358_CHARGER is not set
 CONFIG_REVERSE_CHARGE=y
@@ -2854,7 +2854,7 @@ CONFIG_REGULATOR_PROXY_CONSUMER=y
 # CONFIG_REGULATOR_PV88090 is not set
 # CONFIG_REGULATOR_PWM is not set
 # CONFIG_REGULATOR_QCOM_SPMI is not set
-CONFIG_REGULATOR_QPNP_AMOLED=y
+# CONFIG_REGULATOR_QPNP_AMOLED is not set
 # CONFIG_REGULATOR_QPNP_LABIBB is not set
 CONFIG_REGULATOR_QPNP_LCDB=y
 # CONFIG_REGULATOR_QPNP_OLEDB is not set
@@ -3162,7 +3162,7 @@ CONFIG_DRM_KMS_HELPER=y
 # CONFIG_DRM_QXL is not set
 # CONFIG_DRM_BOCHS is not set
 CONFIG_DRM_MSM=y
-CONFIG_DRM_MSM_REGISTER_LOGGING=y
+# CONFIG_DRM_MSM_REGISTER_LOGGING is not set
 # CONFIG_DRM_MSM_HDMI_HDCP is not set
 # CONFIG_DRM_MSM_HDMI is not set
 # CONFIG_DRM_MSM_DSI is not set
@@ -3212,7 +3212,7 @@ CONFIG_DRM_PANEL_BRIDGE=y
 # CONFIG_DRM_SII902X is not set
 # CONFIG_DRM_TOSHIBA_TC358767 is not set
 # CONFIG_DRM_TI_TFP410 is not set
-CONFIG_DRM_LT_LT9611=y
+# CONFIG_DRM_LT_LT9611 is not set
 # CONFIG_DRM_I2C_ADV7511 is not set
 # CONFIG_DRM_ARCPGU is not set
 # CONFIG_DRM_HISI_HIBMC is not set
@@ -3310,10 +3310,7 @@ CONFIG_BACKLIGHT_QCOM_SPMI_WLED=y
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEOMODE_HELPERS=y
 CONFIG_HDMI=y
-CONFIG_LOGO=y
-# CONFIG_LOGO_LINUX_MONO is not set
-# CONFIG_LOGO_LINUX_VGA16 is not set
-CONFIG_LOGO_LINUX_CLUT224=y
+# CONFIG_LOGO is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
@@ -3858,7 +3855,7 @@ CONFIG_QPNP_USB_PDPHY=y
 # CONFIG_USB_ULPI_BUS is not set
 # CONFIG_UWB is not set
 CONFIG_MMC=y
-CONFIG_MMC_PERF_PROFILING=y
+# CONFIG_MMC_PERF_PROFILING is not set
 CONFIG_PWRSEQ_EMMC=y
 CONFIG_PWRSEQ_SIMPLE=y
 CONFIG_MMC_BLOCK=y
@@ -4503,7 +4500,7 @@ CONFIG_RPMSG_QCOM_GLINK_SPI=y
 # Qualcomm SoC drivers
 #
 # CONFIG_QCOM_MEM_OFFLINE is not set
-CONFIG_QCOM_CPUSS_DUMP=y
+# CONFIG_QCOM_CPUSS_DUMP is not set
 CONFIG_QCOM_RUN_QUEUE_STATS=y
 # CONFIG_QCOM_GSBI is not set
 CONFIG_QCOM_MDT_LOADER=y
@@ -4525,8 +4522,7 @@ CONFIG_QCOM_SMEM=y
 # CONFIG_MSM_L2_SPM is not set
 CONFIG_QCOM_SCM=y
 # CONFIG_QCOM_SCM_QCPE is not set
-CONFIG_QCOM_MEMORY_DUMP_V2=y
-# CONFIG_MSM_DEBUG_LAR_UNLOCK is not set
+# CONFIG_QCOM_MEMORY_DUMP_V2 is not set
 CONFIG_QCOM_WATCHDOG_V2=y
 CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
 # CONFIG_QCOM_WDOG_IPI_ENABLE is not set
@@ -4546,11 +4542,10 @@ CONFIG_SETUP_SSR_NOTIF_TIMEOUTS=y
 CONFIG_SSR_SYSMON_NOTIF_TIMEOUT=20000
 CONFIG_SSR_SUBSYS_NOTIF_TIMEOUT=20000
 CONFIG_PANIC_ON_SSR_NOTIF_TIMEOUT=y
-CONFIG_MSM_BOOT_STATS=y
-# CONFIG_MSM_BOOT_TIME_MARKER is not set
+# CONFIG_MSM_BOOT_STATS is not set
 # CONFIG_MSM_CORE_HANG_DETECT is not set
 # CONFIG_QCOM_DCC is not set
-CONFIG_QCOM_DCC_V2=y
+# CONFIG_QCOM_DCC_V2 is not set
 # CONFIG_MSM_GLADIATOR_HANG_DETECT is not set
 # CONFIG_MSM_GLADIATOR_ERP is not set
 # CONFIG_SDX_EXT_IPC is not set
@@ -4585,11 +4580,7 @@ CONFIG_MSM_PM=y
 # CONFIG_MSM_QBT1000 is not set
 # CONFIG_APSS_CORE_EA is not set
 CONFIG_QCOM_FSA4480_I2C=y
-CONFIG_MSM_IDLE_STATS=y
-CONFIG_MSM_IDLE_STATS_FIRST_BUCKET=62500
-CONFIG_MSM_IDLE_STATS_BUCKET_SHIFT=2
-CONFIG_MSM_IDLE_STATS_BUCKET_COUNT=10
-CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
+# CONFIG_MSM_IDLE_STATS is not set
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_MSM_HAB is not set
 # CONFIG_MSM_AGL is not set
@@ -5480,7 +5471,7 @@ CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
 CONFIG_SECURITY_SELINUX_DEVELOP=y
-CONFIG_SECURITY_SELINUX_AVC_STATS=y
+# CONFIG_SECURITY_SELINUX_AVC_STATS is not set
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 CONFIG_SECURITY_SELINUX_SIDTAB_HASH_BITS=9
 CONFIG_SECURITY_SMACK=y
