arch: Don't enable THINLTO by default
I remove lto for testing builds and it is annoying to always disable
thinlto afterwards.

Signed-off-by: Andrzej Perczak <linux@andrzejperczak.com>
Signed-off-by: Forenche <prahul2003@gmail.com>

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -640,7 +640,7 @@ config ARCH_SUPPORTS_THINLTO
 config THINLTO
 	bool "Use clang ThinLTO (EXPERIMENTAL)"
 	depends on LTO_CLANG && ARCH_SUPPORTS_THINLTO
-	default y
+	default n
 	help
 	  Use ThinLTO to speed up Link Time Optimization.
 
